@startuml

title __SAMPLE's Class Diagram__\n

  namespace sample {
    class sample.Clinic {
        - clinicNumber : Integer
        + Clinic()
        + getHolidays()
        + setHolidays()
    }
  }
  

  namespace sample {
    class sample.DataValidator {
        + isValidAddress()
        {static} + isValidCPR()
        {static} + isValidDate()
        {static} + isValidEmail()
        {static} + isValidName()
        {static} + isValidPhone()
    }
  }
  

  namespace sample {
    class sample.Employee {
        - employeeId : String
        - firstName : String
        - lastName : String
        + Employee()
        + checkAvailable()
        + getEmployeeId()
        + getFirstName()
        + getHolidays()
        + getLastName()
        + printHolidays()
        + setHolidays()
    }
  }
  

  namespace sample {
    class sample.EmployeeController {
        + buttonAdd : Button
        + buttonClearAll : Button
        + empNumberLabel : Label
        + empNumberText : TextField
        + employeeListTextArea : TextArea
        + firstNameText : TextField
        + labelFirstName : Label
        + labelLastName : Label
        + lastNameText : TextField
        - grid : GridPane
        {static} + capitalize()
        + onAddEmployee()
        + onClearAll()
        - clearTextFields()
        - resetTextFields()
    }
  }
  

  namespace sample {
    class sample.Holidays {
        - holidays : ArrayList<LocalDate>
        + Holidays()
        + addHoliday()
        + containsDay()
        + getHolidays()
        + getSize()
        + printHolidays()
        + removeHoliday()
    }
  }
  

  namespace sample {
    class sample.Main {
        {static} ~ gridPaneList : List<GridPane>
        {static} ~ root : VBox
        {static} - index_current : int
        {static} + main()
        {static} + setGridPane()
        + start()
    }
  }
  

  namespace sample {
    class sample.MultisceneController {
        + newEmployee()
        + newPatient()
    }
  }
  

  namespace sample {
    class sample.Patient {
        - cpr : String
        - email : String
        - firstName : String
        - lastName : String
        - phoneNumber : String
        + Patient()
        + getAge()
        + getCpr()
        + getEmail()
        + getFirstName()
        + getGender()
        + getLastName()
        + getPhoneNumber()
        + setCpr()
        + setEmail()
        + setFirstName()
        + setLastName()
        + setPhoneNumber()
        + toString()
    }
  }
  

  namespace sample {
    class sample.PatientController {
        + buttonAdd : Button
        + buttonClearAll : Button
        + cprLabel : Label
        + cprText : TextField
        + emailText : TextField
        + firstNameText : TextField
        + labelEmail : Label
        + labelFirstName : Label
        + labelLastName : Label
        + labelPhone : Label
        + lastNameText : TextField
        + patientListTextArea : TextArea
        + phoneText : TextField
        - grid : GridPane
        {static} + capitalize()
        + initialize()
        + onAddPatient()
        + onClearAll()
        - clearTextFields()
        - resetTextFields()
    }
  }
  

  namespace sample {
    class sample.PatientRegister {
        + patients : ArrayList<Patient>
        + PatientRegister()
        + addPatient()
        + listPatients()
        + printPatients()
        + removePatient()
        + toString()
    }
  }
  

  sample.Clinic o-- sample.Holidays : holidays
  sample.Employee o-- sample.Holidays : holidays
  sample.Main -up-|> javafx.application.Application
  sample.PatientController o-- sample.PatientRegister : patientRegister


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
